# Android-vhal-sdk-generator

./: .gitignore  README.md
vhal-gen/: README.md  STRATEGY.md  pyproject.toml  requirements.txt
vhal-gen/prebuilts/: DefaultProperties.json  VhalTestApp.apk  android.hardware.automotive.vehicle@V3-default-service  build-info.json  vehicle-daemon
vhal-gen/streamlit_app/: app.py
vhal-gen/streamlit_app/pages/: 01_model_loader.py  02_signal_mapping.py  03_configuration.py  04_generate.py
vhal-gen/tests/: test_channel_parser.py  test_full_pipeline.py  test_gcp_builder.py  test_generator.py  test_pdu_parser.py  test_pipeline.py  test_signal_classifier.py  test_ssh_builder.py
vhal-gen/vhal_gen/: __init__.py  __main__.py  cli.py
vhal-gen/vhal_gen/builder/: stub_build.py
vhal-gen/vhal_gen/classifier/: __init__.py  mapping_rules.py  signal_classifier.py  standard_properties.py  vendor_id_allocator.py
vhal-gen/vhal_gen/fetcher/: gerrit_fetcher.py
vhal-gen/vhal_gen/generator/: generator_engine.py
vhal-gen/vhal_gen/models/: aosp_enums.py  signal.py  vehicle_property.py
vhal-gen/vhal_gen/parser/: channel_parser.py  model_loader.py  pdu_parser.py  vsm_parser.py
vhal-gen/vhal_gen/pipeline/: __init__.py  artifact_manager.py  build_trigger.py  config.py  deploy_orchestrator.py  emulator_deployer.py  gcp_builder.py  property_verifier.py  ssh_builder.py
vhal-gen/vhal_gen/shell/: __init__.py  runner.py
vhal-gen/vhal_gen/stubs/: IVehicleHardware.h  VehicleHalTypes.h
vhal-gen/vhal_gen/templates/: Android.bp.j2  AndroidManifest.xml.j2  BridgeVehicleHardware.cpp.j2  (+19 more)
(+64 files in other folders)
